# WeMMI_Gazebo

hector/mobile_manipulator_example/: CMakeLists.txt
hector/mobile_manipulator_moveit_config/: .setup_assistant  package.xml
hector_slam_launch/launch/: gmapping.launch
launch/: pointcloud_to_laserscan.launch
mobile_manipulator_description/: CMakeLists.txt  package.xml
mobile_manipulator_description/launch/: display.launch
mobile_manipulator_description/rviz/: urdf.rviz
mobile_manipulator_description/urdf/: box copy.xacro  box_materials.xacro
mobile_manipulator_example/: CMakeLists.txt  package.xml
mobile_manipulator_example/src/: move_joint_manipulator.cpp  move_manipulator.cpp  move_tracer.cpp
mobile_manipulator_moveit_config/: .setup_assistant
mobile_manipulator_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  tracer_v1.srdf
mobile_manipulator_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  mobile_manipulator.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  trajectory_execution.launch.xml
scout_mini_2dnav/launch/: costmap_common_params.yaml  move_base_only.launch
scout_mini_2dnav/params/: base_local_planner_params.yaml  teb_local_planner_params.yaml
tracer_base/launch/: IMU_localization.launch  tracer_imu.launch
tracer_base/src/: tracer_messenger.cpp
tracer_description/urdf/: box.xacro  tracer_v1.xacro
ur3e_moveit_config/: .setup_assistant
ur3e_moveit_config/config/: sensors_3d.yaml  ur3e.srdf
ur3e_moveit_config/launch/: demo_gazebo.launch  gazebo.launch
(+33 files in other folders)
